[tool.poetry]
name = "bls-linkable-ring-sigs"
version = "0.1.0"
description = ""
authors = ["David Rusu <davidrusu.me@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
python-bls = "0.1.9 "

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
pytest = "^6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
