[tool.poetry]
name = "bls-linkable-ring-sigs"
version = "0.1.0"
description = ""
authors = ["David Rusu <davidrusu.me@gmail.com>"]

[virtualenv]
create = true

[tool.poetry.dependencies]
python = "^3.8"
python-bls = "0.1.9 "
jupyter = "^1.0.0"

# [build-system]
# requires = ["poetry-core>=1.0.0"]
# build-backend = "poetry.core.masonry.api"
